Atualização do site

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         o dia, ou o dia te domina. Treine, Supere, Evolua.
         - Com o meu acompanhamento profissional a sua vida você terá todo suporte necessário para ter uma rotina mais
         saudável ✅</p>
-      <a href="https://wa.me/5511943448225" target="_blank" class="whatsapp-btn">
+      <button id="startButton" class="whatsapp-btn">
         🔥 Quero Começar Agora
-      </a>
+      </button>
     </section>
 
     <section class="bio-section">
