--- a/planos.html
+++ b/planos.html
@@ -53,8 +53,10 @@
       Como professor, desenvolvi um programa completo de treinos para você fazer no conforto da sua casa, com ou sem
       equipamentos. É possível treinar com eficiência, segurança e conquistar resultados reais — mesmo com pouco tempo
       no dia a dia.</p>
-    <a href="https://pages.mfitpersonal.com.br/index?acao=page&tipo=1&page=38839&isCheckout=false"
-      target="_blank">Selecionar Plano</a>
+    <a href="https://pages.mfitpersonal.com.br/index?acao=page&tipo=2&buyPage=38839&page=38839"
+      target="_blank">Selecionar Plano Basic</a>
+    <a href="https://pages.mfitpersonal.com.br/index?acao=page&tipo=2&buyPage=38109&page=38109"
+      target="_blank">Selecionar Plano Premium</a>
   </div>
 
   <a href="index.html" class="voltar"><i class="fas fa-arrow-left"></i> Voltar para o início</a>
