Correção de bug na autenticação

--- a/planos.html
+++ b/planos.html
@@ -54,9 +54,7 @@
       equipamentos. É possível treinar com eficiência, segurança e conquistar resultados reais — mesmo com pouco tempo
       no dia a dia.</p>
     <a href="https://pages.mfitpersonal.com.br/index?acao=page&tipo=2&buyPage=38839&page=38839"
-      target="_blank">Selecionar Plano Basic</a>
-    <a href="https://pages.mfitpersonal.com.br/index?acao=page&tipo=2&buyPage=38109&page=38109"
-      target="_blank">Selecionar Plano Premium</a>
+      target="_blank">Selecionar Plano</a>
   </div>
 
   <a href="index.html" class="voltar"><i class="fas fa-arrow-left"></i> Voltar para o início</a>
